--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recoder",
-  "version": "0.1.0-rc",
+  "version": "0.1.0-rc.0",
   "description": "Various commands for rearranging source code",
   "license": "MIT",
   "author": {
